# ESPSEEEDRobot

./: 0.1uf ceramic nonpolar capacitors.docx  CMakeLists.txt  gpio robot seeed.docx  notes.txt  sdkconfig.defaults
.github/workflows/: main.yml
main/: CMakeLists.txt  audio_player.cpp  audio_player.h  ble_manager.cpp  ble_manager.h  cam_controller.cpp  cam_controller.h  claw_controller.cpp  claw_controller.h  idf_component.yml  main.cpp  sensor_monitor.cpp  sensor_monitor.h  servo_controller.cpp  servo_controller.h  web_html.cpp  web_html.h  web_html_cam.cpp  web_html_claw.cpp  web_html_robot.cpp  web_server.cpp  web_server.h  wifi_manager.cpp  wifi_manager.h
